--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "socket.io-client": "^4.2.0",
     "vue": "^2.6.11",
     "vue-native-websocket": "^2.0.15",
+    "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
